[package]
name = "wmscraper"
version = "0.1.0"
authors = ["= <=>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.12"
selectors = "0.23"
